--- a/EstiloHuellitas.css
+++ b/EstiloHuellitas.css
@@ -19,11 +19,11 @@ header {
 }
 
 .banner-video {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    margin-top: 1rem;
-    border-radius: 10px;
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
 }
 
 main {
